[gd_scene load_steps=2 format=2]

[ext_resource path="res://Ui.gd" type="Script" id=1]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -350.0
margin_top = -40.0

[node name="StartButton" type="Button" parent="HBoxContainer"]
margin_right = 60.0
margin_bottom = 40.0
rect_min_size = Vector2( 60, 0 )
text = "Run"

[node name="StepButton" type="Button" parent="HBoxContainer"]
margin_left = 64.0
margin_right = 124.0
margin_bottom = 40.0
rect_min_size = Vector2( 60, 0 )
text = "Step"

[node name="ClearButton" type="Button" parent="HBoxContainer"]
margin_left = 128.0
margin_right = 188.0
margin_bottom = 40.0
rect_min_size = Vector2( 60, 0 )
text = "Clear"

[node name="Panel" type="Panel" parent="HBoxContainer"]
margin_left = 192.0
margin_right = 272.0
margin_bottom = 40.0
rect_min_size = Vector2( 80, 0 )

[node name="Label" type="Label" parent="HBoxContainer/Panel"]
margin_left = 4.0
margin_top = 13.0
margin_right = 66.0
margin_bottom = 27.0
text = "Step time"

[node name="SpinBox" type="SpinBox" parent="HBoxContainer"]
margin_left = 276.0
margin_right = 350.0
margin_bottom = 40.0
min_value = 0.1
max_value = 2.0
step = 0.1
value = 0.4

[connection signal="pressed" from="HBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="HBoxContainer/StepButton" to="." method="_on_StepButton_pressed"]
[connection signal="pressed" from="HBoxContainer/ClearButton" to="." method="_on_ClearButton_pressed"]
[connection signal="value_changed" from="HBoxContainer/SpinBox" to="." method="_on_SpinBox_value_changed"]
